front-end with table

--- a/client/static/registration.html
+++ b/client/static/registration.html
@@ -380,6 +380,8 @@
             </table>
           </div>
           <hr class="mb-4">
+          <div class="row"> 
+          <div class="col-6">
           <!-- Accommodation -->
           <label>Hébergement</label>
           <div class="form-check">
@@ -401,8 +403,119 @@
             </label>
           </div>
         </div>
+        <div class="col">
+            <button type="button" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+        </div>
       </div>
     </div>
+  </div>
+<!-- TABLE -->
+  <div class="container-fluid">
+      <table class="table table-sm">
+          <thead>
+            <tr>
+              <th scope="col">État</th>
+              <th scope="col">Name</th>
+              <th scope="col">Mission</th> 
+              <th scope="col">Activités Principales</th> 
+              <th scope="col">Activités Supplémentaires</th> 
+              <th scope="col">Date d'arrivée</th> 
+              <th scope="col">Date de départ</th> 
+              <th scope="col">Hébergement</th> 
+              <th scope="col">Nombre de repas</th> 
+              <th scope="col">Gohoshi</th> 
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <div class="checkbox checkbox-success">
+                  <input type="checkbox" id="checkbox2 class=" styled "">
+                  <label></label>
+                </div>
+              </td>
+              <td>Giacomo Guilizzoni</td>
+              <td>Oseiwanin</td>            
+              <td>Gohoshi Mimatsuri</td>
+              <td></td> 
+              <td>01/06 12:30</td>  
+              <td>03/06 14:00</td>
+              <td>Lit</td>  
+              <td>4</td> 
+              <td>Autel</td>  
+            </tr>
+            <tr>
+                <td>
+                  <div class="checkbox checkbox-success">
+                    <input type="checkbox" id="checkbox2 class=" styled "">
+                    <label></label>
+                  </div>
+                </td>
+                <td>Giacomo Guilizzoni</td>
+                <td>Oseiwanin</td>            
+                <td>Gohoshi Mimatsuri</td>
+                <td></td> 
+                <td>01/06 12:30</td>  
+                <td>03/06 14:00</td>
+                <td>Lit</td>  
+                <td>4</td> 
+                <td>Autel</td>  
+              </tr>
+              <tr>
+                  <td>
+                    <div class="checkbox checkbox-success">
+                      <input type="checkbox" id="checkbox2 class=" styled "">
+                      <label></label>
+                    </div>
+                  </td>
+                  <td>Giacomo Guilizzoni</td>
+                  <td>Oseiwanin</td>            
+                  <td>Gohoshi Mimatsuri</td>
+                  <td></td> 
+                  <td>01/06 12:30</td>  
+                  <td>03/06 14:00</td>
+                  <td>Lit</td>  
+                  <td>4</td> 
+                  <td>Autel</td>  
+                </tr>
+                <tr>
+                    <td>
+                      <div class="checkbox checkbox-success">
+                        <input type="checkbox" id="checkbox2 class=" styled "">
+                        <label></label>
+                      </div>
+                    </td>
+                    <td>Giacomo Guilizzoni</td>
+                    <td>Oseiwanin</td>            
+                    <td>Gohoshi Mimatsuri</td>
+                    <td></td> 
+                    <td>01/06 12:30</td>  
+                    <td>03/06 14:00</td>
+                    <td>Lit</td>  
+                    <td>4</td> 
+                    <td>Autel</td>  
+                  </tr>
+                  <tr>
+                      <td>
+                        <div class="checkbox checkbox-success">
+                          <input type="checkbox" id="checkbox2 class=" styled "">
+                          <label></label>
+                        </div>
+                      </td>
+                      <td>Giacomo Guilizzoni</td>
+                      <td>Oseiwanin</td>            
+                      <td>Gohoshi Mimatsuri</td>
+                      <td></td> 
+                      <td>01/06 12:30</td>  
+                      <td>03/06 14:00</td>
+                      <td>Lit</td>  
+                      <td>4</td> 
+                      <td>Autel</td>  
+                    </tr>
+          </tbody>
+        </table>
   </div>
 
 
